reference-llvm/tests/should-fail/fail23.mu
// unknown attribute

function @entry @madeup foo() {

}
